# lattix

./: .gitignore  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  README.md  RESEARCH.md  deny.toml
.cursor/rules/: grafene.mdc  lattix.mdc
.github/: settings.yml
.github/workflows/: ci.yml  publish-validation.yml  publish.yml
core/lattix-core/: Cargo.toml  README.md
core/lattix-core/benches/: random_walk_bench.rs
core/lattix-core/src/: exchange.rs  graph.rs  lib.rs  triple.rs
core/lattix-core/src/algo/: components.rs  sampling.rs
core/lattix-core/src/algo/centrality/: betweenness.rs  hits.rs  katz.rs
core/lattix-core/src/formats/: ntriples.rs  turtle.rs
core/lattix-core/tests/: property_tests.proptest-regressions  property_tests.rs
crates/grafene/: Cargo.toml
crates/grafene-cli/: Cargo.toml
crates/grafene-cli/src/: main.rs
crates/grafene-cli/tests/: test_cli.rs
crates/grafene-core/: Cargo.toml
crates/grafene-core/benches/: random_walk_bench.rs
crates/grafene-core/src/: entity.rs  error.rs  graph.rs  hetero.rs  hyper.rs  lib.rs  relation.rs  triple.rs
crates/grafene-core/src/algo/: mod.rs  pagerank.rs  random_walk.rs  sampling.rs
crates/grafene-core/src/formats/: ntriples.rs
crates/grafene-core/tests/: property_tests.rs
crates/grafene-kge/: Cargo.toml
crates/grafene-kge/src/: error.rs  evaluation.rs  hyperbolic.rs  lib.rs  model.rs  onnx.rs  scoring.rs  training.rs
crates/grafene-kge/src/models/: atth.rs  boxe.rs  burn_backend.rs  hsimple.rs  hype.rs  mod.rs  murp.rs  onnx_wrapper.rs  roth.rs  stare.rs  transe.rs
crates/grafene-kge/tests/: integration.rs
crates/grafene-nn/: Cargo.toml
crates/grafene-nn/src/: conv.rs  error.rs  lib.rs  nn.rs  node2vec.rs
crates/grafene-py/: Cargo.toml  pyproject.toml
crates/grafene-py/src/: lib.rs
crates/grafene-temporal/: Cargo.toml
crates/grafene-temporal/src/: edge.rs  graph.rs  lib.rs  query.rs
crates/grafene/src/: lib.rs
crates/lattix/: Cargo.toml
crates/lattix-cli/: Cargo.toml
crates/lattix-cli/tests/: test_cli.rs
crates/lattix-core/: Cargo.toml
crates/lattix-core/examples/: pagerank_demo.rs  us_states_pagerank.rs
crates/lattix-core/src/: graph.rs  hetero.rs  hyper.rs  lib.rs
crates/lattix-core/tests/: property_tests.rs
crates/lattix-kge/: Cargo.toml
crates/lattix-kge/src/: hyperbolic.rs  lib.rs  model.rs  scoring.rs  training.rs
crates/lattix-kge/tests/: integration.rs
crates/lattix-nn/: Cargo.toml
crates/lattix-nn/src/: conv.rs  kge.rs  onnx.rs  (+1 more)
crates/lattix-py/: Cargo.toml  pyproject.toml
crates/lattix-temporal/: Cargo.toml
crates/nexus/: Cargo.toml
crates/nexus-cli/: Cargo.toml
crates/nexus-cli/src/: main.rs
crates/nexus-core/: Cargo.toml
crates/nexus-kge/: Cargo.toml
crates/nexus-nn/: Cargo.toml
crates/nexus-py/: Cargo.toml  README.md  pyproject.toml
crates/nexus-temporal/: Cargo.toml
crates/nexus-temporal/src/: lib.rs
crates/nexus/src/: lib.rs
docs/: COMPARISON.md  NUANCES.md  RESEARCH.md  critique-followup-roadmap.md  parallel-edge-semantics.md  rdf-term-model.md
evals/arch/: dev_repos_overview.html
hack/viz/: generate_kg_viz.py
jala-cli/: Cargo.toml
jala-cli/src/: main.rs
jala-cli/tests/: test_cli.rs
jala-core/: Cargo.toml
jala-core/lattix-core/: Cargo.toml
jala-kge/: Cargo.toml
jala-kge/lattix-kge/: Cargo.toml
jala-kge/lattix-kge/src/: evaluation.rs  hyperbolic.rs  scoring.rs  training.rs
jala-kge/lattix-kge/src/models/: boxe.rs  hsimple.rs  hype.rs  mod.rs  roth.rs
jala-kge/lattix-kge/tests/: property_tests.rs
jala-kge/src/: error.rs  evaluation.rs  hyperbolic.rs  lib.rs  model.rs
jala-kge/src/models/: atth.rs  betae.rs  boxe.rs  hsimple.rs  hype.rs  mod.rs  murp.rs  query2box.rs  roth.rs  transe.rs
jala-kge/src/reason/: query.rs
jala-kge/src/training/: legacy.rs  matryoshka.rs  mod.rs
jala-kge/tests/: integration.rs  property_tests.rs
jala-main/src/: lib.rs
jala-nn/: Cargo.toml  README.md
jala-nn/src/: kge.rs  lib.rs  nn.rs  onnx.rs
jala-nn/tests/: conv_tests.rs
jala-temporal/: Cargo.toml
jala-temporal/lattix-temporal/: Cargo.toml  README.md
jala-temporal/src/: edge.rs  graph.rs
lattice/: Cargo.toml
lattice-cli/: Cargo.toml
lattice-cli/src/: main.rs
lattice-core/: Cargo.toml
lattice-core/src/: error.rs  graph.rs  lib.rs  triple.rs
lattice-core/src/formats/: mod.rs  nquads.rs  ntriples.rs  turtle.rs
lattice-embed/: Cargo.toml
lattice-embed/src/: error.rs  lib.rs  scoring.rs
lattice/src/: lib.rs
lattix/: Cargo.toml  README.md
lattix-core/: Cargo.toml
lattix-kge/: Cargo.toml
lattix-kge/src/: onnx.rs  scoring.rs
lattix-kge/tests/: reasoning_tests.rs
lattix-nn/: Cargo.toml
lattix-nn/src/: conv.rs  hyperbolic.rs  node2vec.rs
lattix-reason/: Cargo.toml  REASONING_MANIFESTO.md
lattix-reason/examples/: scientist_reasoning.rs
lattix-reason/src/: lib.rs  query.rs
lattix-reason/src/algo/: mod.rs  sparse.rs  symbolic.rs
lattix-reason/tests/: property_tests.rs  sparse_reasoning_tests.rs
lattix-temporal/: Cargo.toml
lattix-temporal/lattix-temporal/src/: lib.rs
lattix-temporal/tests/: temporal_tests.rs
lattix/benches/: graph_bench.rs  random_walk_bench.rs
lattix/examples/: hypergraph.rs  pagerank_demo.rs  ppr_retrieval.rs  random_walks.rs  triples.rs  us_states_pagerank.rs
lattix/src/: entity.rs  error.rs  exchange.rs  graph.rs  hetero.rs  hyper.rs  lib.rs  metrics.rs  query.rs  rdf.rs  relation.rs  sophia_impl.rs  triple.rs
lattix/src/algo/: components.rs  label_propagation.rs  mod.rs  pagerank.rs  ppr.rs  random_walk.rs  sampling.rs
lattix/src/algo/centrality/: betweenness.rs  closeness.rs  degree.rs  eigenvector.rs  hits.rs  katz.rs  mod.rs
lattix/src/formats/: csv.rs  jsonld.rs  mod.rs  nquads.rs  ntriples.rs  oxrdf_helpers.rs  rio_helpers.rs  turtle.rs
lattix/src/kge/: dataset.rs  filter.rs  metrics.rs  mod.rs  triple.rs
lattix/tests/: centrality_integration.rs  critique_repros.rs  property_tests.proptest-regressions  property_tests.rs  qa_exercise.rs  qa_v050_probe.rs
src/: lib.rs
tests/integration/: test_cli.rs
(+61 files in other folders)
