[package]
name = "lattix"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
description = "Graph/KG substrate: triples + PageRank + random walks"
publish = false

[dependencies]
petgraph = "0.6"
rand = "0.8"
rand_chacha = "0.3"

