[package]
name = "lattice-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Core types for knowledge graphs: Triple, Entity, Relation, KnowledgeGraph"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
