[package]
name = "lattice-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "KG embedding inference: TransE, RotatE, ComplEx via ONNX"
publish = false

[dependencies]
lattice-core = { path = "../lattice-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ort = { workspace = true, optional = true }

[features]
default = []
onnx = ["ort"]

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
