[package]
name = "lattice"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Knowledge graph construction and embedding inference for Rust"
publish = false

[dependencies]
lattice-core = { path = "../lattice-core" }
lattice-embed = { path = "../lattice-embed" }

[features]
default = []
onnx = ["lattice-embed/onnx"]

[lints]
workspace = true
