[package]
name = "lattix-reason"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Multi-hop logical reasoning engine for Knowledge Graphs"
publish = false

[dependencies]
lattix-core = { path = "../lattix-core" }
lattix-kge = { path = "../lattix-kge" }
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
proptest = { workspace = true }
