[package]
name = "lattix"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository = "https://github.com/arclabs561/lattix"
homepage = "https://github.com/arclabs561/lattix"
description = "Knowledge graph substrate: core types + basic algorithms + formats"
publish = true
documentation = "https://docs.rs/lattix"
readme = "README.md"
keywords = ["knowledge-graph", "graph", "rdf", "pagerank"]
categories = ["data-structures", "algorithms"]

[dependencies]
lattix-core = { path = "../core/lattix-core", version = "0.1.2" }

[features]
# Minimal by default: dependents opt into formats/algorithms explicitly.
default = []
formats = ["lattix-core/formats"]
algo = ["lattix-core/algo"]
binary = ["lattix-core/binary"]
sophia = ["lattix-core/sophia"]

[lints]
workspace = true
