[package]
name = "lattix"
version = "0.5.1"
edition = "2021"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
repository = "https://github.com/arclabs561/lattix"
homepage = "https://github.com/arclabs561/lattix"
description = "Knowledge graph substrate: core types + basic algorithms + formats"
publish = true
documentation = "https://docs.rs/lattix"
readme = "README.md"
keywords = ["knowledge-graph", "graph", "rdf", "pagerank"]
categories = ["data-structures", "algorithms"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = { version = "0.6", features = ["serde-1"] }
thiserror = "2.0"
graphops = { version = "0.1.0", features = ["petgraph"], optional = true }
oxttl = { version = "0.2.3", optional = true }
rand = { version = "0.9", optional = true }
rand_xorshift = { version = "0.4.0", optional = true }
rayon = { version = "1.10", optional = true }
csv = { version = "1.4.0", optional = true }
bincode = { version = "1.3.3", optional = true }
sophia_api = { version = "0.8", optional = true }
oxrdf = { version = "0.3.3", optional = true }

[dev-dependencies]
proptest = "1.9"
criterion = "0.7"

[features]
default = ["formats", "algo"]
formats = ["dep:oxttl", "dep:oxrdf", "dep:csv"]
algo = ["dep:graphops", "dep:rand", "dep:rand_xorshift", "dep:rayon"]
binary = ["dep:bincode"]
sophia = ["dep:sophia_api"]

[[bench]]
name = "random_walk_bench"
harness = false

[[bench]]
name = "graph_bench"
harness = false

[lints.rust]
missing_docs = "warn"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
