[package]
name = "lattix"
version = "0.7.1"
edition = "2021"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
repository = "https://github.com/arclabs561/lattix"
homepage = "https://github.com/arclabs561/lattix"
description = "Knowledge graph data structures"
publish = true
documentation = "https://docs.rs/lattix"
readme = "README.md"
keywords = ["knowledge-graph", "graph", "rdf", "pagerank"]
categories = ["data-structures", "algorithms"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = { version = "0.8.3", features = ["serde-1"] }
thiserror = "2.0"
graphops = { version = "0.5.0", optional = true }
oxttl = "0.2.3"
oxrdf = "0.3.3"
rand = { version = "0.9", optional = true }
rand_xorshift = { version = "0.4.0", optional = true }
rayon = { version = "1.10", optional = true }
csv = { version = "1.4.0", optional = true }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"], optional = true }
sophia_api = { version = "0.10.0", optional = true }

[dev-dependencies]
proptest = "1.9"
criterion = "0.7"
tempfile = "3.27.0"

[features]
default = ["formats", "algo"]
formats = ["dep:csv"]
algo = ["dep:graphops", "dep:rand", "dep:rand_xorshift", "dep:rayon"]
kge = []
binary = ["dep:postcard"]
sophia = ["dep:sophia_api"]

[[bench]]
name = "random_walk_bench"
harness = false

[[bench]]
name = "graph_bench"
harness = false

[lints.rust]
missing_docs = "warn"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
