[package]
name = "grafene-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for knowledge graph operations"
publish = false

[[bin]]
name = "grafene"
path = "src/main.rs"

[dependencies]
grafene = { path = "../grafene" }
grafene-core = { path = "../grafene-core" }

clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
indicatif = "0.18.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
