[package]
name = "grafene-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Core types for knowledge graphs: Triple, Entity, Relation, KnowledgeGraph"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = { workspace = true, features = ["serde-1"] }
thiserror = { workspace = true }
rio_api = { version = "0.8.4", features = ["generalized"], optional = true }
rio_turtle = { version = "0.8.4", features = ["generalized"], optional = true }
rand = { workspace = true, optional = true }
rand_xorshift = { workspace = true, optional = true }
rand_distr = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
csv = { workspace = true, optional = true }
oxiri = { version = "0.2.11", features = ["serde"], optional = true }
bincode = { version = "1.3.3", optional = true }
sophia_api = { version = "0.8", optional = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = "0.5"

[features]
default = ["formats", "algo", "binary"]
formats = ["dep:rio_api", "dep:rio_turtle", "dep:oxiri", "dep:csv"]
algo = ["dep:rand", "dep:rand_xorshift", "dep:rand_distr", "dep:rayon"]
binary = ["dep:bincode"]
sophia = ["dep:sophia_api"]

[[bench]]
name = "random_walk_bench"
harness = false

[lints]
workspace = true
