[package]
name = "grafene-kge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Knowledge Graph Embeddings: TransE, RotatE, ComplEx, DistMult - inference via ONNX"
publish = false

[dependencies]
grafene-core = { path = "../grafene-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ort = { optional = true, version = "2.0.0-rc", features = ["ndarray"] }
ndarray = "0.16"

# Box embeddings for containment/hierarchy modeling (BoxE)
subsume-core = { path = "../../../subsume/subsume-core", optional = true }
subsume-ndarray = { path = "../../../subsume/subsume-ndarray", optional = true }

# Hyperbolic embeddings for tree-like hierarchies
hyperball = { path = "../../../hyperball", optional = true }
rand = { version = "0.9", optional = true }

[features]
default = []
onnx = ["ort"]
ort = ["dep:ort"]
# BoxE-style containment embeddings
boxe = ["subsume-core", "subsume-ndarray"]
# Hyperbolic KGE (MuRP, RotH, AttH style)
hyperbolic = ["hyperball", "rand"]
# Training with proper optimizers (Adam, AdamW)
training = ["subsume-ndarray"]
# GPU acceleration via Burn (scaffolding, not yet implemented)
# When implementing, add: burn = { version = "0.15", optional = true, features = ["wgpu", "autodiff"] }
burn = []

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
