[package]
name = "lattix"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Graph learning for Rust: GNN, knowledge graphs, temporal graphs"
publish = false

[dependencies]
lattix-core = { path = "../lattix-core" }
lattix-kge = { path = "../lattix-kge", optional = true }
lattix-nn = { path = "../lattix-nn", optional = true }
lattix-temporal = { path = "../lattix-temporal", optional = true }

[features]
default = []
kge = ["lattix-kge"]
onnx = ["lattix-kge", "lattix-kge/onnx"]
nn = ["lattix-nn"]
gnn = ["nn"]  # Alias for backwards compatibility
temporal = ["lattix-temporal"]
full = ["kge", "onnx", "nn", "temporal"]

[lints]
workspace = true
