[package]
name = "nexus-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for knowledge graph operations"
publish = false

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
nexus = { path = "../nexus" }
nexus-core = { path = "../nexus-core" }

clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
indicatif = "0.18.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
