[package]
name = "nexus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Graph learning for Rust: GNN, knowledge graphs, temporal graphs"
publish = false

[dependencies]
nexus-core = { path = "../nexus-core" }
nexus-kge = { path = "../nexus-kge", optional = true }
nexus-nn = { path = "../nexus-nn", optional = true }
nexus-temporal = { path = "../nexus-temporal", optional = true }

[features]
default = []
kge = ["nexus-kge"]
onnx = ["nexus-kge", "nexus-kge/onnx"]
nn = ["nexus-nn"]
gnn = ["nn"]  # Alias for backwards compatibility
temporal = ["nexus-temporal"]
full = ["kge", "onnx", "nn", "temporal"]

[lints]
workspace = true
