[package]
name = "lattix-kge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Knowledge Graph Embeddings: TransE, RotatE, ComplEx, DistMult - inference via ONNX"
publish = false

[dependencies]
lattix-core = { path = "../lattix-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ort = { optional = true, version = "2.0.0-rc", features = ["ndarray"] }
ndarray = "0.16"

# Box embeddings for containment/hierarchy modeling (BoxE)
# Uses git URLs for standalone builds; local path override via [patch] in workspace Cargo.toml
subsume-core = { git = "https://github.com/arclabs561/subsume.git", optional = true }
subsume-ndarray = { git = "https://github.com/arclabs561/subsume.git", optional = true }

# Hyperbolic embeddings for tree-like hierarchies
hyp = { path = "../../../hyp", optional = true, features = ["simd"] }
rand = { version = "0.9", optional = true }

[features]
default = []
onnx = ["ort"]
ort = ["dep:ort"]
# BoxE-style containment embeddings
boxe = ["subsume-core", "subsume-ndarray"]
# Hyperbolic KGE (MuRP, RotH, AttH style)
hyperbolic = ["hyp", "rand"]
# Training with proper optimizers (Adam, AdamW)
training = ["subsume-ndarray"]
# GPU acceleration via Burn
# Note: Using ndarray backend for CPU, wgpu available for GPU
burn = ["dep:burn"]

[dependencies.burn]
version = "0.19"
optional = true
default-features = false
features = ["ndarray", "autodiff"]

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
